<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.colleges.MainActivity$PlaceholderFragment" >

    <Button
        android:id="@+id/button1"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="32dp"
        android:layout_weight="0.08"
        android:text="@string/medicine" />

    <Button
        android:id="@+id/Button01"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="32dp"
        android:layout_weight="0.08"
        android:text="@string/computerscience" />

    <Button
        android:id="@+id/Button02"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="32dp"
        android:layout_weight="0.08"
        android:text="@string/engineering" />

    <Button
        android:id="@+id/Button03"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="32dp"
        android:layout_weight="0.08"
        android:text="@string/literature" />

    <Button
        android:id="@+id/Button04"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="32dp"
        android:layout_weight="0.08"
        android:text="@string/socialscience" />

    <Button
        android:id="@+id/Button05"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="32dp"
        android:layout_weight="0.08"
        android:text="@string/cultivation" />

    <Button
        android:id="@+id/Button06"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="32dp"
        android:layout_weight="0.08"
        android:text="@string/soclology" />

    <Button
        android:id="@+id/Button07"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="32dp"
        android:layout_weight="0.08"
        android:text="@string/law" />

    <Button
        android:id="@+id/Button08"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="32dp"
        android:layout_weight="0.08"
        android:text="@string/edarehama" />

    <Button
        android:id="@+id/Button09"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="32dp"
        android:layout_weight="0.08"
        android:text="@string/honarha" />

    <Button
        android:id="@+id/Button10"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="32dp"
        android:layout_weight="0.08"
        android:text="@string/zhornalizm" />

    <Button
        android:id="@+id/button2"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="144dp"
        android:layout_height="wrap_content"
        android:text="@string/back" />

</LinearLayout>